kubernetes/prometheus/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.k3s.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
